[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-redteam"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "garak>=0.14",
    "langgraph>=0.2",
    "langchain-openai>=0.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13",
    "jinja2>=3.1",
    "tenacity>=8.0",
    "apscheduler>=3.10",
]

[project.scripts]
redteam = "redteam.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["redteam*"]
